Fixed GCP cloudid retrieving process. One jar with dependencies